# TelegramParser

./: docker-compose.yml  pyproject.toml
docker/postgres/initdb/: 001_schema.sql  002_seed_rank_rows.sh
docker/ranks/murmansk/: coldest.jsonl  driest.jsonl  warmest.jsonl  wettest.jsonl
src/meteo_parser/: config.py  decode.py  main.py  models.py  parser.py  reader.py  utils.py
src/meteo_parser/compare/: checks.py  comparator.py  loader.py  models.py  test_compare.py
src/meteo_parser/core/: decode.py  parser.py  reader.py
src/meteo_parser/data/: murmansk.txt
src/meteo_parser/db/: engine.py  models.py  repository.py  test_db_read.py
